# segvol-mlx

./: .gitignore  README.md  pyproject.toml
src/segvol_mlx/: __init__.py  image_encoder.py  inference.py  mask_decoder.py  organ_embeddings.npz  prompt_encoder.py  segvol.py  text_encoder.py  weights.py
tests/: test_mask_decoder_equivalence.py  test_top_level.py
